--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-Q3G1AE4\\SQLEXPRESS;Database=PrograAvanWeb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
